--- a/app/[lang]/globals.css
+++ b/app/[lang]/globals.css
@@ -47,6 +47,8 @@
     }
 
     --animate-marquee: marquee 40s linear infinite;
+
+    --ease-soft: cubic-bezier(0.16, 1, 0.3, 1);
 }
 
 @layer base {
